# MC-OneBot-Plugin

./: .gitignore  PROJECT_SUMMARY.md  README.md  USAGE.md  VERIFICATION.md  config.json  mc_onebot.py  pyproject.toml  setup.bat
.github/workflows/: build.yml
paper_plugin/: README.md  build.bat  pom.xml
paper_plugin/src/main/java/com/example/mcbinding/: MCBindingPlugin.java
paper_plugin/src/main/java/com/example/mcbinding/commands/: BindQQCommand.java  CheckBindCommand.java  UnbindQQCommand.java
paper_plugin/src/main/java/com/example/mcbinding/websocket/: BindingWebSocketClient.java  WebSocketClient.java
paper_plugin/src/main/resources/: config.yml  plugin.yml
